# option_analyzer

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST_ESTIMATE.md  LICENSE  README.md  SECURITY.md  agent.py  pyproject.toml  requirements.txt  scheduler.py  telegram_sender.py  tv_analysis.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gld_agent.yml
src/option_analyzer/: __init__.py
tests/: __init__.py  test_smoke.py
