[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "option-analyzer"
version = "0.1.0"
description = "Options pricing, strategy analysis, and risk assessment toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Option Analyzer Contributors" },
]
keywords = ["options", "finance", "black-scholes", "greeks", "trading"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/<owner>/option_analyzer"
Repository = "https://github.com/<owner>/option_analyzer"
Issues = "https://github.com/<owner>/option_analyzer/issues"
Changelog = "https://github.com/<owner>/option_analyzer/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/option_analyzer"]
